homepage alignment-fixed

--- a/frontend/src/styles/bodyHome.css
+++ b/frontend/src/styles/bodyHome.css
@@ -50,6 +50,8 @@
     height: 100vh;
     position: relative;
     padding: 0.7rem;
+    padding-left: 7rem;
+    padding-right: 7rem;
 }
 
 .background-div {
@@ -79,7 +81,7 @@
     width: 100%;
     height: 100%;
     /* background-color: rgba(0, 0, 0, 0.5); */
-    background: linear-gradient(to bottom, #ffffff00 56%, #ffffff00 56%, #0a0a0ac9 79%, #131313 100%);
+    background: linear-gradient(to bottom, #ffffff00 56%, #ffffff00 56%, #0a0a0ac9 79%, #000000 100%);
     /* Semi-transparent black */
     z-index: 0;
 }
@@ -94,7 +96,7 @@
 
 .first-section-grid-item-2 {
     display: grid;
-    grid-template-columns: 70% 30%;
+    grid-template-columns: 1fr 30%;
     position: relative;
     z-index: 1;
     width: 100%;
@@ -102,24 +104,30 @@
     color: white;
     margin-bottom: 2.5rem;
     padding: 0.5rem;
+    align-items: center;
 }
 
 .home-section-buttons {
-    display: block;
+    display: flex;
     align-items: start;
-    justify-content: start;
+    justify-content: center;
+    /* padding-left: 4.7rem; */
+    width: 100%;
 }
 
+
 .home-section-register-button {
-    width: 75%;
+    width: 100%;
     margin: 0;
     background-color: rgb(13, 110, 253);
-    padding: 0.5rem 2rem 0.5rem 2rem;
+    /* padding: 0.5rem 2rem 0.5rem 2rem; */
+    padding: 1.5rem;
     color: white;
-    border-radius: 20px;
+    border-radius: 4rem;
     border: none;
     font-family: Popins-Regular;
     cursor: pointer;
+    font-size: 24px;
 }
 
 .first-section-grid-item-2 * {
@@ -159,9 +167,13 @@
 }
 
 .home-desc {
-    padding: 0rem 0rem 2rem 6rem;
     color: white;
     text-align: left;
+    font-family: Popins-Medium;
+}
+.home-desc span{
+    font-weight: 600;
+    font-size: x-large;
     font-family: Popins-Medium;
 }
 
@@ -784,7 +796,7 @@
 
 .website-panel-container {
     padding: 4rem 7.5rem 4rem 7.5rem;
-    background-color: #deeeff !important;
+    background-color: rgb(255, 255, 255) !important;
     color: black;
     margin: 2rem 0rem 0 0;
 
@@ -793,14 +805,20 @@
 .website-panel-container h2 {
     color: black;
     /* padding: 2rem; */
-    text-align: left;
+    text-align: center;
     margin-bottom: 20px;
+    font-size: 3rem;
 }
 
 .website-panel-container h3 {
     color: black;
     /* padding: 2rem; */
-    text-align: left;
+    text-align: center;
+    margin-bottom: 20px;
+}
+.website-panel-container p {
+    font-size: 1rem;
+    text-align: center;
     margin-bottom: 20px;
 }
 
@@ -875,10 +893,11 @@
 
 .website-panel-right a {
     display: block;
-    text-align: center;
     color: black;
+    font-weight: bold;
+    cursor: pointer;
+    text-align: center;
     text-decoration: none;
-    font-size: 1.3rem;
 }
 
 .website-panel-right a:hover {
@@ -888,13 +907,9 @@
 .website-panel-content {
     display: grid;
     grid-template-columns: 50% 1fr;
-    padding: 1rem;
-    gap: 10px;
-    background-color: white;
-    /* Example background color for the content area */
-    /* overflow: hidden; */
-    /* border-radius: 20px; */
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+    padding: 2rem 0;
+    gap: 2rem;
+    /* background-color: white; */
     margin-bottom: 20px;
 }
 
@@ -903,11 +918,14 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+    height: 350px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
 
 .template-preview-container img {
     width: 100%;
-    object-fit: fill;
+    height: 100%;
+    object-fit: cover;
     transition: all ease 0.3s;
     vertical-align: middle;
 }
